# inforce_test_task

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
lunch_decision/: Dockerfile  manage.py
lunch_decision/employees/: models.py  permissions.py  serializers.py  urls.py  views.py
lunch_decision/employees/migrations/: 0001_initial.py
lunch_decision/lunch_decision/: asgi.py  settings.py  urls.py  wsgi.py
lunch_decision/tests/: conftest.py  test_current_day.py  test_views.py
